// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compile & inline > css 1`] = `
"<style>
body {
  margin: 0;
}

body div {
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  display: -ms-flexbox;
  display: flex;
}

h1 {
  color: red;
}

p {
  color: #00f;
}
</style>"
`;

exports[`compile & inline > js 1`] = `
"<script>
(() => {
  // test/fixtures/js/module.js
  var message = "Hello, world!";
  var module = () => {
    return message;
  };

  // test/fixtures/js/index.js
  var result = module(message);
  console.log(result);
})();
</script>"
`;

exports[`compile & inline > scss 1`] = `
"<style>
.partial {
  color: green;
}

.partial div {
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  display: -ms-flexbox;
  display: flex;
}

body {
  margin: 0;
}

body h1 {
  color: red;
}

body p {
  color: #00f;
}

.load-path-test {
  color: red;
}
</style>"
`;

exports[`compile & inline > ts 1`] = `
"<script>
(() => {
  // test/fixtures/ts/module.ts
  var message = "Hello, world!";
  var module = () => {
    return message;
  };

  // test/fixtures/ts/index.ts
  var result = module(message);
  console.log(result);
})();
</script>"
`;

exports[`inline > file 1`] = `
"<!-- css -->
<style>
body {
  margin: 0;
}

body div {
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  display: -ms-flexbox;
  display: flex;
}

h1 {
  color: red;
}

p {
  color: #00f;
}
</style>

<!-- scss -->
<style>
.partial {
  color: green;
}

.partial div {
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  display: -ms-flexbox;
  display: flex;
}

body {
  margin: 0;
}

body h1 {
  color: red;
}

body p {
  color: #00f;
}

.load-path-test {
  color: red;
}
</style>

<!-- js -->
<script>
(() => {
  // test/fixtures/js/module.js
  var message = "Hello, world!";
  var module = () => {
    return message;
  };

  // test/fixtures/js/index.js
  var result = module(message);
  console.log(result);
})();
</script>

<!-- ts -->
<script>
(() => {
  // test/fixtures/ts/module.ts
  var message = "Hello, world!";
  var module = () => {
    return message;
  };

  // test/fixtures/ts/index.ts
  var result = module(message);
  console.log(result);
})();
</script>
"
`;

exports[`inline > string 1`] = `
"<!-- css -->
<style>
body {
  margin: 0;
}

body div {
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  display: -ms-flexbox;
  display: flex;
}

h1 {
  color: red;
}

p {
  color: #00f;
}
</style>

<!-- scss -->
<style>
.partial {
  color: green;
}

.partial div {
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  display: -ms-flexbox;
  display: flex;
}

body {
  margin: 0;
}

body h1 {
  color: red;
}

body p {
  color: #00f;
}

.load-path-test {
  color: red;
}
</style>

<!-- js -->
<script>
(() => {
  // test/fixtures/js/module.js
  var message = "Hello, world!";
  var module = () => {
    return message;
  };

  // test/fixtures/js/index.js
  var result = module(message);
  console.log(result);
})();
</script>

<!-- ts -->
<script>
(() => {
  // test/fixtures/ts/module.ts
  var message = "Hello, world!";
  var module = () => {
    return message;
  };

  // test/fixtures/ts/index.ts
  var result = module(message);
  console.log(result);
})();
</script>
"
`;

exports[`options > attribute 1`] = `
"<style>
body {
  margin: 0;
}

body div {
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  display: -ms-flexbox;
  display: flex;
}

h1 {
  color: red;
}

p {
  color: #00f;
}
</style>"
`;

exports[`options > disable css transform 1`] = `
"<!-- css -->
<style>
body {
  margin: 0;

  div {
    display: flex;
    place-items: center;
  }
}

h1 {
  color: red;
}

p {
  color: blue;
}
</style>

<!-- scss -->
<style>
.partial {
  color: green;
}
.partial div {
  display: flex;
  place-items: center;
}

body {
  margin: 0;
}
body h1 {
  color: red;
}
body p {
  color: blue;
}

.load-path-test {
  color: red;
}
</style>

<!-- js -->
<script>
(() => {
  // test/fixtures/js/module.js
  var message = "Hello, world!";
  var module = () => {
    return message;
  };

  // test/fixtures/js/index.js
  var result = module(message);
  console.log(result);
})();
</script>

<!-- ts -->
<script>
(() => {
  // test/fixtures/ts/module.ts
  var message = "Hello, world!";
  var module = () => {
    return message;
  };

  // test/fixtures/ts/index.ts
  var result = module(message);
  console.log(result);
})();
</script>
"
`;

exports[`options > minify css 1`] = `
"<!-- css -->
<style>
body{margin:0}body div{-ms-flex-align:center;align-items:center;justify-items:center;display:-ms-flexbox;display:flex}h1{color:red}p{color:#00f}
</style>

<!-- scss -->
<style>
.partial{color:green}.partial div{-ms-flex-align:center;align-items:center;justify-items:center;display:-ms-flexbox;display:flex}body{margin:0}body h1{color:red}body p{color:#00f}.load-path-test{color:red}
</style>

<!-- js -->
<script>
(() => {
  // test/fixtures/js/module.js
  var message = "Hello, world!";
  var module = () => {
    return message;
  };

  // test/fixtures/js/index.js
  var result = module(message);
  console.log(result);
})();
</script>

<!-- ts -->
<script>
(() => {
  // test/fixtures/ts/module.ts
  var message = "Hello, world!";
  var module = () => {
    return message;
  };

  // test/fixtures/ts/index.ts
  var result = module(message);
  console.log(result);
})();
</script>
"
`;

exports[`options > minify js 1`] = `
"<!-- css -->
<style>
body {
  margin: 0;
}

body div {
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  display: -ms-flexbox;
  display: flex;
}

h1 {
  color: red;
}

p {
  color: #00f;
}
</style>

<!-- scss -->
<style>
.partial {
  color: green;
}

.partial div {
  -ms-flex-align: center;
  align-items: center;
  justify-items: center;
  display: -ms-flexbox;
  display: flex;
}

body {
  margin: 0;
}

body h1 {
  color: red;
}

body p {
  color: #00f;
}

.load-path-test {
  color: red;
}
</style>

<!-- js -->
<script>
(()=>{var o="Hello, world!",e=()=>o;var s=e(o);console.log(s);})();
</script>

<!-- ts -->
<script>
(()=>{var e="Hello, world!",o=()=>e;var s=o(e);console.log(s);})();
</script>
"
`;
